Signed-off-by:hhh2<pengfei.hou@huawei.com>
Signed-off-by: houpengfei <pengfei.hou@huawei.com>
Change-Id: I2c8abf316f5968f0d5d33b43879c5a34b396af29

--- a/services/aams/test/BUILD.gn
+++ b/services/aams/test/BUILD.gn
@@ -148,7 +148,7 @@ ohos_unittest("accessibility_account_data_test") {
     "ces_standard:cesfwk_innerkits",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
   ]
 }
@@ -241,7 +241,7 @@ ohos_unittest("accessible_ability_manager_service_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "ipc:libdbinder",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
     "samgr_standard:samgr_proxy",
   ]
@@ -325,7 +325,7 @@ ohos_unittest("accessibility_touch_guider_test") {
     "ability_runtime:runtime",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
     "samgr_standard:samgr_proxy",
   ]
@@ -414,7 +414,7 @@ ohos_unittest("accessibility_common_event_registry_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "ipc:libdbinder",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
     "samgr_standard:samgr_proxy",
   ]
@@ -496,7 +496,7 @@ ohos_unittest("accessibility_input_interceptor_test") {
     "ces_standard:cesfwk_innerkits",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
   ]
 }
@@ -574,7 +574,7 @@ ohos_unittest("accessibility_window_manager_test") {
     "ces_standard:cesfwk_innerkits",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
   ]
 }
@@ -664,7 +664,7 @@ ohos_unittest("accessibility_keyevent_filter_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "ipc:libdbinder",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
     "samgr_standard:samgr_proxy",
   ]
@@ -763,7 +763,7 @@ ohos_unittest("accessible_ability_connection_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "ipc:libdbinder",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
   ]
 }
@@ -848,7 +848,7 @@ ohos_unittest("accessibility_display_manager_test") {
     "bundle_framework:appexecfwk_core",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
     "samgr_standard:samgr_proxy",
   ]
@@ -932,7 +932,7 @@ ohos_unittest("accessibility_touchEvent_injector_test") {
     "ability_runtime:runtime",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
     "samgr_standard:samgr_proxy",
   ]
@@ -1025,7 +1025,7 @@ ohos_unittest("accessibility_interaction_bridge_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "ipc:libdbinder",
-    "multimodalinput_base:libmmi-client",
+    "input:libmmi-client",
     "os_account_standard:os_account_innerkits",
     "samgr_standard:samgr_proxy",
   ]
