--- a/services/aams/test/BUILD.gn
+++ b/services/aams/test/BUILD.gn
@@ -28,7 +28,6 @@ config("module_private_config") {
   include_dirs = aams_mock_include_dirs
   include_dirs += [
     "mock",
-    "//third_party/json/include",
     "//utils/native/base/include",
     "//utils/system/safwk/native/include",
     "//base/accessibility/services/aams/include",
@@ -137,6 +136,7 @@ ohos_unittest("accessibility_account_data_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -230,6 +230,7 @@ ohos_unittest("accessible_ability_manager_service_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -315,6 +316,7 @@ ohos_unittest("accessibility_touch_guider_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -402,6 +404,7 @@ ohos_unittest("accessibility_common_event_registry_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -485,6 +488,7 @@ ohos_unittest("accessibility_input_interceptor_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -563,6 +567,7 @@ ohos_unittest("accessibility_window_manager_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -652,6 +657,7 @@ ohos_unittest("accessibility_keyevent_filter_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -751,6 +757,7 @@ ohos_unittest("accessible_ability_connection_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -837,6 +844,7 @@ ohos_unittest("accessibility_display_manager_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -922,6 +930,7 @@ ohos_unittest("accessibility_touchEvent_injector_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
@@ -1013,6 +1022,7 @@ ohos_unittest("accessibility_interaction_bridge_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
