--- a/services/test/BUILD.gn
+++ b/services/test/BUILD.gn
@@ -30,7 +30,6 @@ config("module_private_config") {
   include_dirs += [
     "mock/aafwk/include",
     "../aams/test/mock/",
-    "//third_party/json/include",
     "//utils/native/base/include",
     "//utils/system/safwk/native/include",
     "//base/accessibility/services/aams/include",
@@ -144,6 +143,7 @@ ohos_moduletest("aams_accessibility_touch_guider_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
@@ -231,6 +231,7 @@ ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
@@ -324,6 +325,7 @@ ohos_moduletest("aams_accessible_ability_channel_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
@@ -418,6 +420,7 @@ ohos_moduletest("aams_server_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
@@ -504,6 +507,7 @@ ohos_moduletest("aams_accessibility_keyevent_filter_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
@@ -596,6 +600,7 @@ ohos_moduletest("aams_common_event_registry_test") {
     "//foundation/windowmanager/utils:libwmutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
 
