third_party/json upgrade to 3.9.1
Signed-off-by: mayunteng_1 <mayunteng@huawei.com>
Change-Id: I236f624b34265c4e7ea6cb6afc5774cfa8196e25

--- a/frameworks/aafwk/test/BUILD.gn
+++ b/frameworks/aafwk/test/BUILD.gn
@@ -84,6 +84,8 @@ ohos_unittest("accessible_ability_test") {
     "//utils/native/base:utils",
   ]
 
+  ldflags = [ "-Wl,--exclude-libs,libnlohmann_json_static.a" ]
+
   external_deps = [
     "ability_base:want",
     "bundle_framework:appexecfwk_base",
