--- a/services/test/BUILD.gn
+++ b/services/test/BUILD.gn
@@ -148,6 +148,8 @@ ohos_moduletest("aams_accessibility_touch_guider_test") {
     "//utils/native/base:utils",
   ]
 
+  ldflags = [ "-Wl,--exclude-libs,libnlohmann_json_static.a" ]
+
   external_deps = [
     "ability_base:want",
     "ability_runtime:runtime",
@@ -235,6 +237,8 @@ ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
+
+  ldflags = [ "-Wl,--exclude-libs,libnlohmann_json_static.a" ]
 
   external_deps = [
     "ability_base:want",
@@ -329,6 +333,8 @@ ohos_moduletest("aams_accessible_ability_channel_test") {
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
+
+  ldflags = [ "-Wl,--exclude-libs,libnlohmann_json_static.a" ]
 
   external_deps = [
     "ability_base:want",
@@ -425,6 +431,8 @@ ohos_moduletest("aams_server_test") {
     "//utils/native/base:utils",
   ]
 
+  ldflags = [ "-Wl,--exclude-libs,libnlohmann_json_static.a" ]
+
   external_deps = [
     "ability_base:want",
     "ability_runtime:runtime",
@@ -511,6 +519,8 @@ ohos_moduletest("aams_accessibility_keyevent_filter_test") {
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
+
+  ldflags = [ "-Wl,--exclude-libs,libnlohmann_json_static.a" ]
 
   external_deps = [
     "ability_base:want",
@@ -603,6 +613,8 @@ ohos_moduletest("aams_common_event_registry_test") {
     "//third_party/json:nlohmann_json_static",
     "//utils/native/base:utils",
   ]
+
+  ldflags = [ "-Wl,--exclude-libs,libnlohmann_json_static.a" ]
 
   external_deps = [
     "ability_base:want",
