--- a/interfaces/innerkits/aafwk/BUILD.gn
+++ b/interfaces/innerkits/aafwk/BUILD.gn
@@ -11,7 +11,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//base/accessibility/accessibility_aafwk.gni")
 import("//build/ohos.gni")
 
 aafwk_path = "//base/accessibility/frameworks/aafwk"
@@ -48,14 +47,12 @@ ohos_shared_library("accessibleability") {
 
   public_configs = [ ":accessibleability_public_config" ]
 
-  deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
-    "//base/accessibility/services/interface:aams_interface",
-  ]
+  deps = [ "//base/accessibility/services/interface:aams_interface" ]
 
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
