--- a/services/aams/test/BUILD.gn
+++ b/services/aams/test/BUILD.gn
@@ -43,11 +43,6 @@ config("module_private_config") {
     "//base/notification/common_event_service/interfaces/inner_api",
     "//base/powermgr/power_manager/interfaces/innerkits/native/include",
     "//foundation",
-    "${aafwk_kits_path}/ability/native/include/",
-    "${aafwk_kits_path}/appkit/native/app/include/",
-    "${aafwk_inner_api_path}/ability_manager/include",
-    "${aafwk_inner_api_path}/app_manager/include/appmgr/",
-    "${aafwk_services_path}/abilitymgr/include",
     "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
     "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
     "//foundation/distributedschedule/samgr/interfaces/innerkits/common/include",
@@ -92,8 +87,6 @@ ohos_unittest("accessibility_account_data_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_inner_api_path}/ability_manager:ability_manager",
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/aams:accessibleabilityms",
     "//base/accessibility/services/interface:aams_interface",
@@ -109,6 +102,8 @@ ohos_unittest("accessibility_account_data_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -143,7 +138,6 @@ ohos_unittest("accessible_ability_manager_service_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/aams:accessibleabilityms",
     "//base/accessibility/services/interface:aams_interface",
@@ -158,6 +152,7 @@ ohos_unittest("accessible_ability_manager_service_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -206,7 +201,6 @@ ohos_unittest("accessibility_touch_guider_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/global/resource_management/frameworks/resmgr:global_resmgr",
     "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
@@ -220,6 +214,7 @@ ohos_unittest("accessibility_touch_guider_test") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -258,7 +253,6 @@ ohos_unittest("accessibility_common_event_registry_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/aams:accessibleabilityms",
     "//base/accessibility/services/interface:aams_interface",
@@ -274,6 +268,7 @@ ohos_unittest("accessibility_common_event_registry_test") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -324,8 +319,6 @@ ohos_unittest("accessibility_input_interceptor_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_inner_api_path}/ability_manager:ability_manager",
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/aams:accessibleabilityms",
     "//base/accessibility/services/interface:aams_interface",
@@ -341,6 +334,8 @@ ohos_unittest("accessibility_input_interceptor_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -378,8 +373,6 @@ ohos_unittest("accessibility_window_manager_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_inner_api_path}/ability_manager:ability_manager",
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/aams:accessibleabilityms",
     "//base/accessibility/services/interface:aams_interface",
@@ -395,6 +388,8 @@ ohos_unittest("accessibility_window_manager_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -439,7 +434,6 @@ ohos_unittest("accessibility_keyevent_filter_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/aams:accessibleabilityms",
     "//base/accessibility/services/interface:aams_interface",
@@ -455,6 +449,7 @@ ohos_unittest("accessibility_keyevent_filter_test") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -513,7 +508,6 @@ ohos_unittest("accessible_ability_connection_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/interface:aams_interface",
     "//base/global/resource_management/frameworks/resmgr:global_resmgr",
@@ -530,6 +524,7 @@ ohos_unittest("accessible_ability_connection_test") {
     "ability_base:configuration",
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -555,7 +550,6 @@ ohos_unittest("accessibility_display_manager_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/services/interface:aams_interface",
     "//base/global/resource_management/frameworks/resmgr:global_resmgr",
     "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
@@ -569,6 +563,7 @@ ohos_unittest("accessibility_display_manager_test") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
@@ -601,7 +596,6 @@ ohos_unittest("accessibility_touchevent_injector_test") {
   configs = [ ":module_private_config" ]
 
   deps = [
-    "${aafwk_kits_path}/ability/native:abilitykit_native",
     "//base/accessibility/interfaces/innerkits/common:accessibility_common",
     "//base/accessibility/services/aams:accessibleabilityms",
     "//base/accessibility/services/interface:aams_interface",
@@ -617,6 +611,7 @@ ohos_unittest("accessibility_touchevent_injector_test") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
