--- a/services/test/aamstestmock.gni
+++ b/services/test/aamstestmock.gni
@@ -11,7 +11,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-aafwk_inner_api_path = "//foundation/ability/ability_runtime/interfaces/innerkits"
+aafwk_inner_api_path =
+    "//foundation/ability/ability_runtime/interfaces/innerkits"
 aafwk_kits_path = "//foundation/ability/ability_runtime/frameworks/kits"
 aafwk_path = "//foundation/ability/ability_runtime"
 aafwk_services_path = "//foundation/ability/ability_runtime/services"
