update accessibility about parameter temp patch
Signed-off-by: Mupceet <laiguizhong@huawei.com>

--- a/services/aams/test/BUILD.gn
+++ b/services/aams/test/BUILD.gn
@@ -44,6 +44,7 @@ config("module_private_config") {
     "//base/global/resource_management/interfaces/inner_api/include",
     "//base/notification/common_event_service/interfaces/inner_api",
     "//base/powermgr/power_manager/interfaces/innerkits/native/include",
+    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
     "//foundation",
     "${ability_runtime_path}/interfaces/kits/native/ability/native/",
     "${ability_runtime_path}/interfaces/kits/native/appkit/app/",
@@ -248,6 +249,7 @@ ohos_unittest("accessibility_common_event_registry_test") {
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_service_stub.cpp",
+    "//foundation/barrierfree/accessibility/services/test/mock/mock_parameter.cpp",
     "mock/src/mock_accessibility_account_data.cpp",
     "mock/src/mock_common_event_data.cpp",
     "mock/src/mock_common_event_manager.cpp",
@@ -315,6 +317,7 @@ ohos_unittest("accessibility_input_interceptor_test") {
     "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
+    "//foundation/barrierfree/accessibility/services/test/mock/mock_parameter.cpp",
     "mock/src/aafwk/mock_bundle_manager.cpp",
     "mock/src/mock_accessibility_account_data.cpp",
     "mock/src/mock_accessibility_gesture_recognizer.cpp",
@@ -436,6 +439,7 @@ ohos_unittest("accessibility_keyevent_filter_test") {
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_stub.cpp",
     "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_service_stub.cpp",
+    "//foundation/barrierfree/accessibility/services/test/mock/mock_parameter.cpp",
     "mock/src/aafwk/mock_bundle_manager.cpp",
     "mock/src/mock_common_event_data.cpp",
     "mock/src/mock_common_event_manager.cpp",
@@ -506,6 +510,7 @@ ohos_unittest("accessible_ability_connection_test") {
     "../src/accessible_ability_manager_service.cpp",
     "../src/accessible_ability_manager_service_event_handler.cpp",
     "../src/utils.cpp",
+    "//foundation/barrierfree/accessibility/services/test/mock/mock_parameter.cpp",
     "mock/src/aafwk/mock_ability_manager_client.cpp",
     "mock/src/aafwk/mock_bundle_manager.cpp",
     "mock/src/mock_accessibility_element_operator_callback_stub.cpp",
