--- a/interfaces/innerkits/acfwk/BUILD.gn
+++ b/interfaces/innerkits/acfwk/BUILD.gn
@@ -56,6 +56,8 @@ ohos_shared_library("accessibilityconfig") {
     "c_utils:utils",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "init:libbeget_proxy",
+    "init:libbegetutil",
     "samgr_standard:samgr_proxy",
   ]
 
