--- a/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
@@ -50,6 +50,7 @@ ohos_shared_library("accessibility_extension_module") {
     "ability_runtime:ability_context_native",
     "ability_runtime:abilitykit_native",
     "ability_runtime:app_context",
+    "ability_runtime:extension_base",
     "ability_runtime:runtime",
     "c_utils:utils",
     "hiviewdfx_hilog_native:libhilog",
