add local coverage generation
Signed-off-by: zaki <zhoujun141@huawei.com>
Change-Id: I753e49cf41b004a301d245350a02339a0cd390a2

--- a/interfaces/innerkits/aafwk/BUILD.gn
+++ b/interfaces/innerkits/aafwk/BUILD.gn
@@ -18,7 +18,12 @@ aafwk_path = "//foundation/barrierfree/accessibility/frameworks/aafwk"
 
 config("accessibleability_private_config") {
   visibility = [ ":*" ]
-
+  cflags = [
+    "--coverage"
+  ]
+  ldflags = [
+    "--coverage"
+  ]
   include_dirs = [
     "${aafwk_path}/include",
     "//foundation/barrierfree/accessibility/common/log/include",
