--- a/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
@@ -15,7 +15,12 @@ import("//build/ohos.gni")
 
 config("accessibility_extension_module_config") {
   visibility = [ ":*" ]
-
+  cflags = [
+    "--coverage"
+  ]
+  ldflags = [
+    "--coverage"
+  ]
   include_dirs = [
     "//foundation/barrierfree/accessibility/common/log/include",
     "//foundation/barrierfree/accessibility/interfaces/innerkits/acfwk/include",
