--- a/common/interface/BUILD.gn
+++ b/common/interface/BUILD.gn
@@ -23,8 +23,15 @@ config("accessibility_interface_private_config") {
     "AAMS_LOG_DOMAIN = 0xD001D02",
   ]
 
+  cflags = [
+    "--coverage",
+  ]
+  ldflags = [
+    "--coverage"
+  ]
+
   if (target_cpu == "arm") {
-    cflags = [ "-DBINDER_IPC_32BIT" ]
+    cflags += [ "-DBINDER_IPC_32BIT" ]
   }
 }
 
