--- a/interfaces/innerkits/test/fuzztest/accessibleabilityclient_fuzzer/BUILD.gn
+++ b/interfaces/innerkits/test/fuzztest/accessibleabilityclient_fuzzer/BUILD.gn
@@ -22,10 +22,14 @@ ohos_fuzztest("AccessibleAbilityClientFuzzTest") {
 
   include_dirs = []
   cflags = [
+    "--coverage",
     "-g",
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
+  ]
+  ldflags = [
+    "--coverage"
   ]
   sources = [ "accessibleabilityclient_fuzzer.cpp" ]
   deps = [ "//foundation/barrierfree/accessibility/interfaces/innerkits/aafwk:accessibleability" ]
