--- a/interfaces/kits/napi/BUILD.gn
+++ b/interfaces/kits/napi/BUILD.gn
@@ -19,6 +19,12 @@ ohos_shared_library("accessibility") {
     "//foundation/barrierfree/accessibility/common/log/include",
     "./include",
   ]
+  cflags = [
+    "--coverage"
+  ]
+  ldflags = [
+    "--coverage"
+  ]
 
   defines = [
     "AAMS_LOG_TAG = \"accessibility_napi\"",
