--- a/interfaces/kits/napi/accessibility_config/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_config/BUILD.gn
@@ -19,7 +19,12 @@ ohos_shared_library("config_napi") {
     "//foundation/barrierfree/accessibility/interfaces/kits/napi/include",
     "./include",
   ]
-
+  cflags = [
+    "--coverage"
+  ]
+  ldflags = [
+    "--coverage"
+  ]
   defines = [
     "AAMS_LOG_TAG = \"accessibility_napi\"",
     "AAMS_LOG_DOMAIN = 0xD001D10",
