--- a/interfaces/kits/napi/accessibility_extension_context/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_extension_context/BUILD.gn
@@ -38,7 +38,12 @@ gen_js_obj("accessibility_extension_context_abc") {
 
 ohos_shared_library("accessibilityextensioncontext_napi") {
   sources = [ "accessibility_extension_context_module.cpp" ]
-
+  cflags = [
+    "--coverage"
+  ]
+  ldflags = [
+    "--coverage"
+  ]
   deps = [
     ":accessibility_extension_context_abc",
     ":accessibility_extension_context_js",
