--- a/services/aams/test/BUILD.gn
+++ b/services/aams/test/BUILD.gn
@@ -20,7 +20,12 @@ module_output_path = "accessibility/framework_test"
 #1. intent(c++) get/set test without transport
 config("module_private_config") {
   visibility = [ ":*" ]
-  cflags = []
+  cflags = [
+    "--coverage"
+  ]
+  ldflags = [
+    "--coverage"
+  ]
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
   }
