--- a/frameworks/aafwk/test/BUILD.gn
+++ b/frameworks/aafwk/test/BUILD.gn
@@ -104,6 +104,7 @@ ohos_unittest("accessibility_ui_test_ability_impl_test") {
     "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "samgr:samgr_proxy",
   ]
 }
@@ -177,6 +178,7 @@ ohos_unittest("accessible_ability_test") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
     "window_manager:libdm",
