--- a/services/test/BUILD.gn
+++ b/services/test/BUILD.gn
@@ -154,6 +154,7 @@ ohos_moduletest("aams_accessibility_touch_guider_test") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "window_manager:libwm",
   ]
 }
@@ -230,6 +231,7 @@ ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "window_manager:libwm",
   ]
 }
@@ -311,6 +313,7 @@ ohos_moduletest("aams_accessible_ability_channel_test") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "window_manager:libwm",
   ]
 }
@@ -390,6 +393,7 @@ ohos_moduletest("aams_server_test") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "window_manager:libwm",
   ]
 }
@@ -464,6 +468,7 @@ ohos_moduletest("aams_accessibility_keyevent_filter_test") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "window_manager:libwm",
   ]
 }
@@ -543,6 +548,7 @@ ohos_moduletest("aams_common_event_registry_test") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "window_manager:libwm",
   ]
 }
