部件化整改：删除依赖的绝对路径，使用cesfwk_innerkits的外部依赖
Signed-off-by: Lotol <linxiangzhi@huawei.com>
Change-Id: I8b773a6e46d5ea5c3dff977633a2b8eb2a5fb9c1

--- a/frameworks/asacfwk/test/BUILD.gn
+++ b/frameworks/asacfwk/test/BUILD.gn
@@ -69,6 +69,7 @@ ohos_unittest("asac_unit_test") {
     "ability_base:want",
     "ability_runtime:ability_manager",
     "c_utils:utils",
+    "common_event_service:cesfwk_innerkits",
     "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
