--- a/interfaces/innerkits/test/benchmarktest/accessibility_config_test/BUILD.gn
+++ b/interfaces/innerkits/test/benchmarktest/accessibility_config_test/BUILD.gn
@@ -23,12 +23,12 @@ ohos_benchmarktest("BenchmarkTestForAccessibilityConfig") {
   }
 
   deps = [
-    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
-    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
-    "//foundation/barrierfree/accessibility/interfaces/innerkits/acfwk:accessibilityconfig",
+    "../../../acfwk:accessibilityconfig",
   ]
   external_deps = [
     "access_token:libaccesstoken_sdk",
+    "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
     "c_utils:utils",
   ]
 }
