--- a/interfaces/innerkits/test/fuzztest/accessibleabilityclient_fuzzer/BUILD.gn
+++ b/interfaces/innerkits/test/fuzztest/accessibleabilityclient_fuzzer/BUILD.gn
@@ -22,12 +22,14 @@ ohos_fuzztest("AccessibleAbilityClientFuzzTest") {
 
   include_dirs = []
   configs = [
-    "//foundation/barrierfree/accessibility/interfaces/innerkits/test/fuzztest:configs_cc_ld",
-    "//foundation/barrierfree/accessibility/resources/config/build:coverage_flags",
+    "../../fuzztest:configs_cc_ld",
+    "../../../../../resources/config/build:coverage_flags",
   ]
   sources = [ "accessibleabilityclient_fuzzer.cpp" ]
-  deps = [ "//foundation/barrierfree/accessibility/interfaces/innerkits/aafwk:accessibleability" ]
-  external_deps = [ "c_utils:utils" ]
+  deps = [ "../../../aafwk:accessibleability" ]
+  external_deps = [
+    "c_utils:utils",
+  ]
 }
 
 ###############################################################################
