--- a/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
@@ -17,10 +17,10 @@ config("accessibility_extension_module_config") {
   visibility = [ ":*" ]
 
   include_dirs = [
-    "//foundation/barrierfree/accessibility/common/log/include",
-    "//foundation/barrierfree/accessibility/interfaces/innerkits/acfwk/include",
-    "//foundation/barrierfree/accessibility/interfaces/kits/napi/accessibility_extension_module_loader/include",
-    "//foundation/barrierfree/accessibility/interfaces/kits/napi/include",
+    "../../../../common/log/include",
+    "../../../innerkits/acfwk/include",
+    "include",
+    "../include",
   ]
 
   defines = [
@@ -43,7 +43,7 @@ ohos_shared_library("accessibility_extension_module") {
 
   deps = [
     "./../../../innerkits/common:accessibility_common",
-    "//foundation/barrierfree/accessibility/interfaces/innerkits/aafwk:accessibleability",
+    "../../../innerkits/aafwk:accessibleability",
   ]
 
   external_deps = [
