--- a/services/test/aamstestmock.gni
+++ b/services/test/aamstestmock.gni
@@ -11,21 +11,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ability_base_path = "//foundation/ability/ability_base"
-ability_runtime_path = "//foundation/ability/ability_runtime"
+ability_base_path = "../../../../ability/ability_base"
+ability_runtime_path = "../../../../ability/ability_runtime"
 ability_runtime_inner_api_path = "${ability_runtime_path}/interfaces/inner_api"
 ability_runtime_kits_path = "${ability_runtime_path}/frameworks/kits"
 ability_runtime_services_path = "${ability_runtime_path}/services"
-AAMS_MOCK_PATH = "//foundation/barrierfree/accessibility/services/test/mock"
+AAMS_MOCK_PATH = "./mock"
 
 aams_mock_include_dirs = [
   "$AAMS_MOCK_PATH/distributeddatamgr/include",
   "$AAMS_MOCK_PATH/multimodalinput/include",
   "$AAMS_MOCK_PATH/powermanager/include",
-  "//foundation/distributeddatamgr/preferences/interfaces/inner_api/include",
-  "//foundation/multimodalinput/input/interfaces/native/innerkits/proxy/include",
-  "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
-  "//base/powermgr/power_manager/interfaces/inner_api/native/include",
+  "../../../../distributeddatamgr/preferences/interfaces/inner_api/include",
+  "../../../../multimodalinput/input/interfaces/native/innerkits/proxy/include",
+  "../../../../multimodalinput/input/interfaces/native/innerkits/event/include",
+  "../../../../../base/powermgr/power_manager/interfaces/inner_api/native/include",
 ]
 
 aams_mock_distributeddatamgr_src =
