部件规范整改 Signed-off-by: zhanghuiyu<zhanghuiyu9@huawei.com>

--- a/services/test/aamstestmock.gni
+++ b/services/test/aamstestmock.gni
@@ -17,6 +17,11 @@ ability_runtime_inner_api_path = "${ability_runtime_path}/interfaces/inner_api"
 ability_runtime_kits_path = "${ability_runtime_path}/frameworks/kits"
 ability_runtime_services_path = "${ability_runtime_path}/services"
 AAMS_MOCK_PATH = "//foundation/barrierfree/accessibility/services/test/mock"
+AAMS_FRAMEWORKS_PATH = "//foundation/barrierfree/accessibility/frameworks"
+AAMS_INTERFACES_PATH = "//foundation/barrierfree/accessibility/interfaces"
+AAMS_SERVICES_PATH = "//foundation/barrierfree/accessibility/services"
+AAMS_COMMON_PATH = "//foundation/barrierfree/accessibility/common"
+AAMS_FOUNDATION_PATH = "//foundation"
 
 aams_mock_include_dirs = [
   "$AAMS_MOCK_PATH/distributeddatamgr/include",
@@ -26,6 +31,23 @@ aams_mock_include_dirs = [
   "//foundation/multimodalinput/input/interfaces/native/innerkits/proxy/include",
   "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
   "//base/powermgr/power_manager/interfaces/inner_api/native/include",
+  "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_base/include",
+  "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include",
+  "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include/bundlemgr",
+  "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
+  "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
+  "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
+  "//foundation/multimedia/image_framework/interfaces/kits/native/include",
+  "//foundation/multimodalinput/input/util/common/include",
+  "//foundation/window/window_manager/dm/include",
+  "//foundation/window/window_manager/interfaces/innerkits/dm",
+  "//foundation/window/window_manager/interfaces/innerkits/wm",
+  "//foundation/window/window_manager/utils/include",
+  "//third_party/json/include",
+  "//third_party/jsoncpp/include",
+  "//third_party/jsoncpp/include/json",
+  "//commonlibrary/c_utils/base/include",
+  "//utils/system/safwk/native/include",
 ]
 
 aams_mock_distributeddatamgr_src =
