--- a/services/test/aamstestmock.gni
+++ b/services/test/aamstestmock.gni
@@ -49,8 +49,8 @@ aams_mock_include_dirs = [
   "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
   "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
   "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
-  "//foundation/multimedia/image_framework/interfaces/kits/native/include",
-  "//foundation/multimedia/image_framework/interfaces/innerkits/include",
+  "../../../graphic/image_framework/interfaces/kits/native/include",
+  "../../../graphic/image_framework/interfaces/innerkits/include",
   "//foundation/multimodalinput/input/util/common/include",
   "//foundation/window/window_manager/dm/include",
   "//foundation/window/window_manager/interfaces/innerkits",
