无障碍框架修改测试用例 Signed-off-by: jinqi6 <jinqi6@huawei.com>

--- a/interfaces/innerkits/aafwk/BUILD.gn
+++ b/interfaces/innerkits/aafwk/BUILD.gn
@@ -53,6 +53,7 @@ ohos_shared_library("accessibleability") {
   deps = [ "../../../common/interface:accessibility_interface" ]
 
   external_deps = [
+    "access_token:libaccesstoken_sdk",
     "c_utils:utils",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
