--- a/frameworks/aafwk/test/BUILD.gn
+++ b/frameworks/aafwk/test/BUILD.gn
@@ -152,6 +152,7 @@ ohos_unittest("accessible_ability_test") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "access_token:libaccesstoken_sdk",
     "c_utils:utils",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
