使用datashare持久化数据代码框架
Signed-off-by: w00675913 <wangjin193@huawei.com>

--- a/services/aams/test/BUILD.gn
+++ b/services/aams/test/BUILD.gn
@@ -65,6 +65,7 @@ ohos_unittest("accessibility_account_data_test") {
 
   sources = [
     "../src/accessibility_account_data.cpp",
+    "mock/src/mock_accessibility_setting_provider.cpp",
     "mock/src/mock_accessibility_settings_config.cpp",
     "mock/src/mock_accessible_ability_client_stub_impl.cpp",
     "mock/src/mock_accessible_ability_connection.cpp",
@@ -95,6 +96,8 @@ ohos_unittest("accessibility_account_data_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
     "init:libbegetutil",
@@ -152,6 +155,8 @@ ohos_unittest("accessible_ability_manager_service_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "hilog:libhilog",
     "init:libbegetutil",
@@ -224,6 +229,8 @@ ohos_unittest("accessibility_touch_guider_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
@@ -280,6 +287,8 @@ ohos_unittest("accessibility_common_event_registry_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
@@ -360,6 +369,8 @@ ohos_unittest("accessibility_input_interceptor_test") {
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
@@ -421,6 +432,8 @@ ohos_unittest("accessibility_window_manager_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
@@ -473,6 +486,8 @@ ohos_unittest("accessibility_keyevent_filter_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
@@ -526,6 +541,7 @@ ohos_unittest("accessible_ability_connection_test") {
     "../src/accessible_ability_manager_service_event_handler.cpp",
     "../src/utils.cpp",
     "mock/src/aafwk/mock_bundle_manager.cpp",
+    "mock/src/mock_accessibility_setting_provider.cpp",
     "mock/src/mock_accessibility_element_operator_callback_stub.cpp",
     "mock/src/mock_accessibility_element_operator_stub.cpp",
     "mock/src/mock_accessibility_keyevent_filter.cpp",
@@ -558,6 +574,8 @@ ohos_unittest("accessible_ability_connection_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
@@ -604,6 +622,8 @@ ohos_unittest("accessibility_display_manager_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
     "init:libbegetutil",
@@ -667,6 +687,8 @@ ohos_unittest("accessibility_dumper_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
@@ -719,6 +741,8 @@ ohos_unittest("accessibility_touchevent_injector_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "init:libbegetutil",
@@ -761,6 +785,7 @@ ohos_unittest("accessible_ability_channel_test") {
     "mock/src/mock_accessibility_element_operator_stub.cpp",
     "mock/src/mock_accessibility_event_transmission.cpp",
     "mock/src/mock_accessibility_keyevent_filter.cpp",
+    "mock/src/mock_accessibility_setting_provider.cpp",
     "mock/src/mock_accessibility_settings_config.cpp",
     "mock/src/mock_accessibility_touchEvent_injector.cpp",
     "mock/src/mock_accessibility_window_manager.cpp",
@@ -790,6 +815,8 @@ ohos_unittest("accessible_ability_channel_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
@@ -844,6 +871,8 @@ ohos_unittest("accessibility_mouse_autoclick_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "hilog:libhilog",
     "init:libbegetutil",
     "input:libmmi-client",
@@ -895,6 +924,8 @@ ohos_unittest("accessibility_screen_touch_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "hilog:libhilog",
     "init:libbegetutil",
     "input:libmmi-client",
@@ -935,6 +966,8 @@ ohos_unittest("accessibility_mouse_key_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
     "init:libbegetutil",
@@ -986,6 +1019,8 @@ ohos_unittest("accessibility_short_key_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "init:libbegetutil",
@@ -1028,6 +1063,8 @@ ohos_unittest("accessibility_settings_config_test") {
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "hilog:libhilog",
     "init:libbegetutil",
     "os_account:domain_account_innerkits",
@@ -1078,6 +1115,8 @@ ohos_unittest("accessibility_zoom_gesture_test") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_common",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "init:libbegetutil",
