--- a/services/test/aamstestmock.gni
+++ b/services/test/aamstestmock.gni
@@ -38,6 +38,10 @@ aams_mock_include_dirs = [
   "//base/powermgr/display_manager/utils/native/include",
   "//foundation",
   "//foundation/arkui/napi/native_engine",
+  "//foundation/distributeddatamgr/data_share/interfaces/inner_api/common/include",
+  "//foundation/distributeddatamgr/data_share/interfaces/inner_api/common/include/basic",
+  "//foundation/distributeddatamgr/data_share/interfaces/inner_api/consumer/include",
+  "//foundation/distributeddatamgr/data_share/interfaces/inner_api/provider/include",
   "//foundation/distributeddatamgr/preferences/interfaces/inner_api/include",
   "//foundation/multimodalinput/input/interfaces/native/innerkits/proxy/include",
   "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
