--- a/services/test/BUILD.gn
+++ b/services/test/BUILD.gn
@@ -93,6 +93,7 @@ ohos_moduletest("aams_accessibility_touch_guider_test") {
     "./mock/mock_ability_manager_client.cpp",
     "./mock/mock_accessibility_element_operator_impl.cpp",
     "./mock/mock_accessibility_element_operator_proxy.cpp",
+    "./mock/mock_accessibility_setting_provider.cpp",
     "./mock/mock_accessible_ability_client_proxy.cpp",
     "./mock/mock_accessible_ability_manager_service_stub.cpp",
     "./mock/mock_bundle_manager.cpp",
@@ -124,9 +125,12 @@ ohos_moduletest("aams_accessibility_touch_guider_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
+    "ability_runtime:dataobs_manager",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
@@ -174,6 +178,7 @@ ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
     "./mock/mock_ability_manager_client.cpp",
     "./mock/mock_accessibility_element_operator_impl.cpp",
     "./mock/mock_accessibility_element_operator_proxy.cpp",
+    "./mock/mock_accessibility_setting_provider.cpp",
     "./mock/mock_accessible_ability_client_proxy.cpp",
     "./mock/mock_accessible_ability_manager_service_stub.cpp",
     "./mock/mock_bundle_manager.cpp",
@@ -206,9 +211,12 @@ ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
+    "ability_runtime:dataobs_manager",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
@@ -256,6 +264,7 @@ ohos_moduletest("aams_accessible_ability_channel_test") {
     "./mock/mock_ability_manager_client.cpp",
     "./mock/mock_accessibility_element_operator_impl.cpp",
     "./mock/mock_accessibility_element_operator_proxy.cpp",
+    "./mock/mock_accessibility_setting_provider.cpp",
     "./mock/mock_accessible_ability_client_proxy.cpp",
     "./mock/mock_accessible_ability_manager_service_stub.cpp",
     "./mock/mock_bundle_manager.cpp",
@@ -294,8 +303,11 @@ ohos_moduletest("aams_accessible_ability_channel_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
+    "ability_runtime:dataobs_manager",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
@@ -341,6 +353,7 @@ ohos_moduletest("aams_server_test") {
     "../aams/src/utils.cpp",
     "./mock/mock_ability_connect_callback_stub.cpp",
     "./mock/mock_ability_manager_client.cpp",
+    "./mock/mock_accessibility_setting_provider.cpp",
     "./mock/mock_accessible_ability_client_proxy.cpp",
     "./mock/mock_accessible_ability_manager_service_stub.cpp",
     "./mock/mock_bundle_manager.cpp",
@@ -379,8 +392,11 @@ ohos_moduletest("aams_server_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
+    "ability_runtime:dataobs_manager",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
@@ -426,6 +442,7 @@ ohos_moduletest("aams_accessibility_keyevent_filter_test") {
     "../aams/src/utils.cpp",
     "./mock/mock_ability_connect_callback_stub.cpp",
     "./mock/mock_ability_manager_client.cpp",
+    "./mock/mock_accessibility_setting_provider.cpp",
     "./mock/mock_accessible_ability_client_proxy.cpp",
     "./mock/mock_accessible_ability_manager_service_stub.cpp",
     "./mock/mock_bundle_manager.cpp",
@@ -458,9 +475,12 @@ ohos_moduletest("aams_accessibility_keyevent_filter_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
+    "ability_runtime:dataobs_manager",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
@@ -506,6 +526,7 @@ ohos_moduletest("aams_common_event_registry_test") {
     "../aams/src/utils.cpp",
     "./mock/mock_ability_connect_callback_stub.cpp",
     "./mock/mock_ability_manager_client.cpp",
+    "./mock/mock_accessibility_setting_provider.cpp",
     "./mock/mock_accessible_ability_client_proxy.cpp",
     "./mock/mock_accessible_ability_manager_service_stub.cpp",
     "./mock/mock_bundle_manager.cpp",
@@ -544,8 +565,11 @@ ohos_moduletest("aams_common_event_registry_test") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
+    "ability_runtime:dataobs_manager",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "display_manager:displaymgr",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
